Ensure Slicer SHA is always current using jinja2-github extension

--- a/{{cookiecutter.project_name}}/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/CMakeLists.txt
@@ -19,7 +19,7 @@ if(NOT DEFINED slicersources_SOURCE_DIR)
   # Download Slicer sources and set variables slicersources_SOURCE_DIR and slicersources_BINARY_DIR
   FetchContent_Populate(slicersources
     GIT_REPOSITORY git://github.com/Slicer/Slicer
-    GIT_TAG        b3dc70bf56e32fac3a3d317f331bca8398e4f53a # 2018-08-31
+    GIT_TAG        {% github_repo_branch_sha "Slicer/Slicer" %}
     GIT_PROGRESS   1
     )
 else()
