COMP: Ensure CMAKE_OSX_* variables are properly initialized
This commit moves the "project()" statement after the include of
SlicerInitializeOSXVariables module to ensure the CMAKE_OSX_ variables
are all initialized.

Adapted from https://github.com/Kitware/SlicerSALT/commit/4b3de19add8634d1bec4fe48b84b5d9b5ca9d121#diff-af3b638bc2a3e6c650974192a53c7291

--- a/{{cookiecutter.project_name}}/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/CMakeLists.txt
@@ -11,8 +11,6 @@ endif()
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-project({{cookiecutter.project_name}})
-
 # Slicer sources
 include(FetchContent)
 if(NOT DEFINED slicersources_SOURCE_DIR)
@@ -26,8 +24,11 @@ else()
   set(slicersources_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/slicersources-subbuild)
 endif()
 
+# macOS initialization
 set(CMAKE_MODULE_PATH ${slicersources_SOURCE_DIR}/CMake ${CMAKE_MODULE_PATH})
 include(SlicerInitializeOSXVariables)
+
+project({{cookiecutter.project_name}})
 
 # Configure Application
 set(Slicer_APPLICATIONS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Applications)
