--- a/{{cookiecutter.project_name}}/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/CMakeLists.txt
@@ -105,9 +105,9 @@ set(Slicer_QTSCRIPTEDMODULES_DISABLED
 
 # Enable/Disable Slicer custom modules: To create a new module, use the SlicerExtensionWizard.
 set(Slicer_EXTENSION_SOURCE_DIRS
-  #${${APPLICATION_NAME}_SOURCE_DIR}/Modules/CLI/MyCLIModule
-  #${${APPLICATION_NAME}_SOURCE_DIR}/Modules/Loadable/MyLoadableModule
-  #${${APPLICATION_NAME}_SOURCE_DIR}/Modules/Scripted/MyScriptedModule
+  #${{ '{' }}{{cookiecutter.project_name}}_SOURCE_DIR}/Modules/CLI/MyCLIModule
+  #${{ '{' }}{{cookiecutter.project_name}}_SOURCE_DIR}/Modules/Loadable/MyLoadableModule
+  #${{ '{' }}{{cookiecutter.project_name}}_SOURCE_DIR}/Modules/Scripted/MyScriptedModule
   )
 
 # Add remote extension source directories
