BUG: Fix support for default settings and ensure startup pop are hidden
This change requires fix introduced in Slicer r27667

--- a/{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/CMakeLists.txt
@@ -94,5 +94,6 @@ slicerMacroBuildApplication(
   SRCS ${APP_SRCS}
   TARGET_LIBRARIES ${APP_TARGET_LIBRARIES}
   TARGET_NAME_VAR "APP_TARGET_NAME"
+  DEFAULT_SETTINGS_FILE Resources/Settings/DefaultSettings.ini
   ${extra_args}
   )
