Hide console on Windows by default
Display of console on Windows is controlled by Slicer_BUILD_WIN32_CONSOLE_LAUNCHER option in recent Slicer-4.13 versions.

The existing Slicer_BUILD_WIN32_CONSOLE option only controls if SlicerApp-real.exe is built as a console application (and therefore it can print to its console output) and does not affect visibility of the console (which is displayed by the Slicer.exe launcher).

--- a/{{cookiecutter.project_name}}/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/CMakeLists.txt
@@ -88,7 +88,8 @@ endif()
 option(BUILD_TESTING                            "Build application test suite"                        ON)
 option(Slicer_BUILD_DOCUMENTATION               "Build documentation (Doxygen, sphinx, ...)"          OFF)
 if(WIN32)
-  option(Slicer_BUILD_WIN32_CONSOLE             "Build application executable as a console app"       OFF)
+  option(Slicer_BUILD_WIN32_CONSOLE_LAUNCHER    "Build ${PROJECT_NAME} launcher executable as a console app on windows (displays console at application start)" OFF)
+  option(Slicer_BUILD_WIN32_CONSOLE             "Build application executable as a console app (allows capturing and piping console output)" ON)
 endif()
 
 option(Slicer_BUILD_DICOM_SUPPORT               "Build application with DICOM support"                ON)
