COMP: Disable application update support by default
Corresponding Slicer commit:
https://github.com/Slicer/Slicer/commit/3ce46788cde6d74167cd5bb7639855dc1e59401e

Custom applications can either disable application updates or set a different default update server URL.

--- a/{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/Resources/Settings/DefaultSettings.ini
+++ b/{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/Resources/Settings/DefaultSettings.ini
@@ -1,5 +1,8 @@
 [General]
 
+[ApplicationUpdate]
+ServerUrl=https://download.slicer.org
+
 [MainWindow]
 DontConfirmExit=1024
 DontConfirmRestart=1024
