COMP: Remove unused python-based Qt resource file
Since icons like Home.png and Gears.png are installed and referenced
by path (e.g using resourcePath()), this commit removes the unused
generation of python-based resource file.

--- a/{{cookiecutter.project_name}}/Modules/Scripted/Home/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/Modules/Scripted/Home/CMakeLists.txt
@@ -14,14 +14,10 @@ set(MODULE_PYTHON_RESOURCES
   Resources/Home.qss
   )
 
-slicerFunctionAddPythonQtResources(MODULE_PYTHON_QRC_RESOURCES
-  Resources/HomeResources.qrc
-  )
-
 #-----------------------------------------------------------------------------
 slicerMacroBuildScriptedModule(
   NAME ${MODULE_NAME}
-  SCRIPTS ${MODULE_PYTHON_SCRIPTS}  ${MODULE_PYTHON_QRC_RESOURCES}
+  SCRIPTS ${MODULE_PYTHON_SCRIPTS}
   RESOURCES ${MODULE_PYTHON_RESOURCES}
   )
 
