ENH: Re-introduce Qt resource support in Python
This commit re-introduces the support removed in c91fa78637 (COMP: Remove
unused python-based Qt resource file).

It also ensures that the resources are available through Qt resource
system by importing the corresponding module.

This is particularly relevant when styling application through qss stylesheet
where icons can be referenced setting attribute like  the following:

  image: url(":/Icons/Image.svg");

The "Gears.png" icon is added only for the sake of testing the generation of
the python-based Qt resource file and may be removed after populating the
file.

--- a/{{cookiecutter.project_name}}/Modules/Scripted/Home/CMakeLists.txt
+++ b/{{cookiecutter.project_name}}/Modules/Scripted/Home/CMakeLists.txt
@@ -14,10 +14,14 @@ set(MODULE_PYTHON_RESOURCES
   Resources/Home.qss
   )
 
+slicerFunctionAddPythonQtResources(MODULE_PYTHON_QRC_RESOURCES
+  Resources/${MODULE_NAME}.qrc
+  )
+
 #-----------------------------------------------------------------------------
 slicerMacroBuildScriptedModule(
   NAME ${MODULE_NAME}
-  SCRIPTS ${MODULE_PYTHON_SCRIPTS}
+  SCRIPTS ${MODULE_PYTHON_SCRIPTS} ${MODULE_PYTHON_QRC_RESOURCES}
   RESOURCES ${MODULE_PYTHON_RESOURCES}
   )
 
