--- a/{{cookiecutter.project_name}}/.ruff.toml
+++ b/{{cookiecutter.project_name}}/.ruff.toml
@@ -3,6 +3,7 @@ line-length = 120
 
 [lint]
 select = [
+  "ARG",         # flake8-unused-arguments
   "B",           # flake8-bugbear
   "C4",          # flake8-comprehensions
   "D",           # pydocstyle
