ENH: Add dependabot configuration files

--- a/{{cookiecutter.project_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_name}}/.pre-commit-config.yaml
@@ -48,4 +48,5 @@ repos:
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: "0.29.1"
     hooks:
+      - id: check-dependabot
       - id: check-github-workflows
