--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,4 +46,5 @@ repos:
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: "0.29.1"
     hooks:
+      - id: check-dependabot
       - id: check-github-workflows
