ENH: Update "commit-message" workflow to use dedicated GitHub action
Switch to using the dedicated slicer-check-commit-message-action
for better tracking of updates by Dependabot. This replaces the
reusable workflow previously maintained in the Slicer repository.

By pinning the version of the standalone action, Dependabot will now
track updates specific to the commit-message action, avoiding
unnecessary references to broader Slicer changes.

--- a/.github/workflows/commit-message.yml
+++ b/.github/workflows/commit-message.yml
@@ -16,4 +16,9 @@ permissions:
 
 jobs:
   check-commit-message:
-    uses: Slicer/Slicer/.github/workflows/commit-message.yml@418027bc07ce0aff12fe97c0e769062cc090a961 # main
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Commit Message
+        uses: Slicer/slicer-check-commit-message-action@26db1d4a0580194025a00bff6f5c24a88c0efb9f # v1.0.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
