--- a/{{cookiecutter.project_name}}/.github/workflows/commit-message.yml
+++ b/{{cookiecutter.project_name}}/.github/workflows/commit-message.yml
@@ -16,4 +16,9 @@ permissions:
 
 jobs:
   check-commit-message:
-    uses: Slicer/Slicer/.github/workflows/commit-message.yml@f2b79dcfcbf628695607cfa68789d1c0143de2c0 # main
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Commit Message
+        uses: Slicer/slicer-check-commit-message-action@26db1d4a0580194025a00bff6f5c24a88c0efb9f # v1.0.0
+        with:
+          token: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
